--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install .
 # command to run tests
-script:
-  - pytest # or py.test for Python versions 3.5 and below
+script: pytest
