--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - "3.6"
 # command to run tests
+install:
+  - pip install slackclient
 script: 
   - python starterbot.py 
